--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -6,4 +6,4 @@ body { padding: 0; margin: 0 }
 #unity-progress-bar-empty { width: 141px; height: 18px; margin-top: 10px; margin-left: 6.5px; background: url('progress-bar-empty-dark.png') no-repeat center }
 #unity-progress-bar-full { width: 0%; height: 18px; margin-top: 10px; background: url('progress-bar-full-dark.png') no-repeat center }
 #unity-warning { position: absolute; left: 50%; top: 5%; transform: translate(-50%); background: white; padding: 10px; display: none }
-#unity-fullscreen-button { float: right; width: 38px; height: 38px; background: url('fullscreen-button.png') no-repeat center }
+#unity-fullscreen-button { position: absolute; right: 10px; bottom: 10px; width: 38px; height: 38px; background: url('fullscreen-button.png') no-repeat center; background-size: contain; }
